Bug 375882 - Smoothing/Stabilizer Options are extremely slow to change
Summary: Smoothing/Stabilizer Options are extremely slow to change
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: 3.1.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-02-02 07:52 UTC by Dmitry Kazakov
Modified: 2017-04-17 12:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry Kazakov 2017-02-02 07:52:29 UTC
Since recently, changing smoothing/stabilizer options became extremely slow.
Comment 1 Halla Rempt 2017-02-27 18:56:17 UTC
I cannot reproduce this.
Comment 2 Dmitry Kazakov 2017-04-10 13:51:41 UTC
Git commit 17da7e1e49362b352c0f6b069a4b5c19a429c01f by Dmitry Kazakov.
Committed on 10/04/2017 at 13:51.
Pushed by dkazakov into branch 'master'.

Fix slowdown when changing of the smoothing options
Ref T5753

M  +73   -45   libs/ui/tool/kis_smoothing_options.cpp
M  +10   -11   libs/ui/tool/kis_smoothing_options.h

https://commits.kde.org/krita/17da7e1e49362b352c0f6b069a4b5c19a429c01f
Comment 3 Dmitry Kazakov 2017-04-17 12:03:49 UTC
Git commit 9be24287419794ed1fd1a44195bbc88382df9bb5 by Dmitry Kazakov.
Committed on 17/04/2017 at 11:38.
Pushed by dkazakov into branch 'krita/3.1'.

Fix slowdown when changing of the smoothing options
Ref T5753

M  +73   -45   libs/ui/tool/kis_smoothing_options.cpp
M  +10   -11   libs/ui/tool/kis_smoothing_options.h

https://commits.kde.org/krita/9be24287419794ed1fd1a44195bbc88382df9bb5