Fix slowdown when changing of the smoothing options

BUG:375882
Ref T5753